--- a/package.json
+++ b/package.json
@@ -86,63 +86,63 @@
 		"typedoc": "typedoc libs --tsconfig ./tsconfig.json --out ./dist/typedoc",
 		"update": "ng update @nrwl/workspace",
 		"update:all": "nx update --all --force",
-		"workspace-schematic": "nx workspace-schematic",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"postinstall": "husky install && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.json",
+		"_postinstall": "husky install && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.json",
 		"release": "standard-version",
 		"release:minor": "standard-version --release-as minor",
 		"release:major": "standard-version --release-as major",
 		"prepublishOnly": "yarn build",
 		"prepublish": "pinst --disable",
-		"postpublish": "pinst --enable"
+		"postpublish": "pinst --enable",
+		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "^11.0.2",
+		"@angular/animations": "11.0.5",
 		"@angular/cdk": "^11.0.0",
-		"@angular/common": "~11.0.2",
-		"@angular/compiler": "~11.0.2",
-		"@angular/core": "~11.0.2",
-		"@angular/forms": "~11.0.2",
+		"@angular/common": "11.0.5",
+		"@angular/compiler": "11.0.5",
+		"@angular/core": "11.0.5",
+		"@angular/forms": "11.0.5",
 		"@angular/material": "^11.0.0",
-		"@angular/platform-browser": "~11.0.2",
-		"@angular/platform-browser-dynamic": "~11.0.2",
-		"@angular/router": "~11.0.2",
+		"@angular/platform-browser": "11.0.5",
+		"@angular/platform-browser-dynamic": "11.0.5",
+		"@angular/router": "11.0.5",
 		"@fortawesome/angular-fontawesome": "^0.8.0",
 		"@fortawesome/fontawesome-svg-core": "^1.2.32",
 		"@fortawesome/free-brands-svg-icons": "^5.15.1",
 		"@fortawesome/free-solid-svg-icons": "^5.15.1",
-		"@nrwl/angular": "10.4.4",
+		"@nrwl/angular": "11.0.20",
 		"core-js": "~3.7.0",
 		"rxjs": "~6.6.3",
 		"tslib": "^2.0.3",
 		"zone.js": "~0.11.3"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.1100.2",
+		"@angular-devkit/build-angular": "0.1100.5",
 		"@angular-eslint/builder": "^0.8.0-beta.2",
 		"@angular-eslint/eslint-plugin": "^0.8.0-beta.1",
 		"@angular-eslint/eslint-plugin-template": "^0.8.0-beta.1",
 		"@angular-eslint/schematics": "^0.8.0-beta.2",
 		"@angular-eslint/template-parser": "^0.8.0-beta.2",
-		"@angular/cli": "~11.0.2",
-		"@angular/compiler-cli": "~11.0.2",
-		"@angular/language-service": "~11.0.2",
+		"@angular/cli": "11.0.5",
+		"@angular/compiler-cli": "11.0.5",
+		"@angular/language-service": "11.0.5",
 		"@commitlint/cli": "~11.0.0",
 		"@commitlint/config-conventional": "~11.0.0",
-		"@nrwl/cypress": "~10.4.4",
-		"@nrwl/eslint-plugin-nx": "~10.4.4",
-		"@nrwl/jest": "~10.4.4",
-		"@nrwl/linter": "~10.4.4",
-		"@nrwl/node": "~10.4.4",
-		"@nrwl/web": "~10.4.4",
-		"@nrwl/workspace": "~10.4.4",
+		"@nrwl/cypress": "11.0.20",
+		"@nrwl/eslint-plugin-nx": "11.0.20",
+		"@nrwl/jest": "11.0.20",
+		"@nrwl/linter": "11.0.20",
+		"@nrwl/node": "11.0.20",
+		"@nrwl/web": "11.0.20",
+		"@nrwl/workspace": "11.0.20",
 		"@types/jest": "~26.0.15",
 		"@types/js-base64": "~3.0.0",
-		"@types/node": "~14.14.9",
+		"@types/node": "12.12.38",
 		"@typescript-eslint/eslint-plugin": "~4.8.2",
 		"@typescript-eslint/parser": "~4.8.2",
-		"codelyzer": "^6.0.1",
+		"codelyzer": "6.0.1",
 		"cpy-cli": "^3.1.1",
 		"cypress": "~5.6.0",
 		"dotenv": "~8.2.0",
@@ -178,7 +178,7 @@
 		"stylelint-config-prettier": "~8.0.2",
 		"stylelint-prettier": "~1.1.2",
 		"ts-jest": "~26.4.4",
-		"ts-node": "~9.0.0",
+		"ts-node": "9.1.1",
 		"typedoc": "~0.19.2",
 		"typedoc-plugin-external-module-name": "~4.0.3",
 		"typescript": "~4.0.3",
