--- a/package.json
+++ b/package.json
@@ -99,32 +99,32 @@
 	},
 	"dependencies": {
 		"@angular/animations": "11.0.5",
-		"@angular/cdk": "^11.0.0",
+		"@angular/cdk": "^11.0.3",
 		"@angular/common": "11.0.5",
 		"@angular/compiler": "11.0.5",
 		"@angular/core": "11.0.5",
 		"@angular/forms": "11.0.5",
-		"@angular/material": "^11.0.0",
+		"@angular/material": "^11.0.3",
 		"@angular/platform-browser": "11.0.5",
 		"@angular/platform-browser-dynamic": "11.0.5",
 		"@angular/router": "11.0.5",
-		"@fortawesome/angular-fontawesome": "^0.8.0",
+		"@fortawesome/angular-fontawesome": "^0.8.1",
 		"@fortawesome/fontawesome-svg-core": "^1.2.32",
 		"@fortawesome/free-brands-svg-icons": "^5.15.1",
 		"@fortawesome/free-solid-svg-icons": "^5.15.1",
 		"@nrwl/angular": "11.0.20",
-		"core-js": "~3.7.0",
+		"core-js": "~3.8.1",
 		"rxjs": "~6.6.3",
 		"tslib": "^2.0.3",
 		"zone.js": "~0.11.3"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "0.1100.5",
-		"@angular-eslint/builder": "^0.8.0-beta.2",
-		"@angular-eslint/eslint-plugin": "^0.8.0-beta.1",
-		"@angular-eslint/eslint-plugin-template": "^0.8.0-beta.1",
-		"@angular-eslint/schematics": "^0.8.0-beta.2",
-		"@angular-eslint/template-parser": "^0.8.0-beta.2",
+		"@angular-eslint/builder": "^1.0.0",
+		"@angular-eslint/eslint-plugin": "^1.0.0",
+		"@angular-eslint/eslint-plugin-template": "^1.0.0",
+		"@angular-eslint/schematics": "^1.0.0",
+		"@angular-eslint/template-parser": "^1.0.0",
 		"@angular/cli": "11.0.5",
 		"@angular/compiler-cli": "11.0.5",
 		"@angular/language-service": "11.0.5",
@@ -137,32 +137,32 @@
 		"@nrwl/node": "11.0.20",
 		"@nrwl/web": "11.0.20",
 		"@nrwl/workspace": "11.0.20",
-		"@types/jest": "~26.0.15",
+		"@types/jest": "~26.0.19",
 		"@types/js-base64": "~3.0.0",
-		"@types/node": "12.12.38",
-		"@typescript-eslint/eslint-plugin": "~4.8.2",
-		"@typescript-eslint/parser": "~4.8.2",
+		"@types/node": "14.14.17",
+		"@typescript-eslint/eslint-plugin": "~4.11.1",
+		"@typescript-eslint/parser": "~4.11.1",
 		"codelyzer": "6.0.1",
 		"cpy-cli": "^3.1.1",
-		"cypress": "~5.6.0",
+		"cypress": "~6.2.0",
 		"dotenv": "~8.2.0",
-		"eslint": "~7.14.0",
-		"eslint-config-prettier": "~6.15.0",
+		"eslint": "~7.16.0",
+		"eslint-config-prettier": "~7.1.0",
 		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jsdoc": "^30.7.8",
+		"eslint-plugin-jsdoc": "^30.7.9",
 		"eslint-plugin-prefer-arrow": "^1.2.2",
-		"eslint-plugin-prettier": "~3.1.4",
+		"eslint-plugin-prettier": "~3.3.0",
 		"eslint-plugin-react": "latest",
 		"husky": "^5.0.4",
 		"jest": "~26.6.3",
 		"jest-preset-angular": "8.3.2",
-		"lint-staged": "~10.5.2",
-		"markdownlint": "~0.21.1",
-		"markdownlint-cli": "~0.25.0",
+		"lint-staged": "~10.5.3",
+		"markdownlint": "~0.22.0",
+		"markdownlint-cli": "~0.26.0",
 		"ng-packagr": "^11.0.3",
-		"npm-check-updates": "~10.2.2",
+		"npm-check-updates": "~10.2.5",
 		"pinst": "^2.1.1",
-		"prettier": "~2.2.0",
+		"prettier": "~2.2.1",
 		"remark": "~13.0.0",
 		"remark-cli": "~9.0.0",
 		"remark-lint": "~8.0.0",
@@ -170,19 +170,19 @@
 		"remark-preset-lint-consistent": "~4.0.0",
 		"remark-preset-lint-recommended": "~5.0.0",
 		"rimraf": "~3.0.2",
-		"rollup": "~2.33.3",
+		"rollup": "~2.35.1",
 		"rollup-plugin-gzip": "~2.5.0",
 		"rollup-plugin-terser": "~7.0.2",
-		"standard-version": "~9.0.0",
+		"standard-version": "~9.1.0",
 		"stylelint": "~13.8.0",
 		"stylelint-config-prettier": "~8.0.2",
 		"stylelint-prettier": "~1.1.2",
 		"ts-jest": "~26.4.4",
 		"ts-node": "9.1.1",
-		"typedoc": "~0.19.2",
-		"typedoc-plugin-external-module-name": "~4.0.3",
+		"typedoc": "~0.20.7",
+		"typedoc-plugin-external-module-name": "~4.0.5",
 		"typescript": "~4.0.3",
-		"webpack-bundle-analyzer": "~4.1.0",
+		"webpack-bundle-analyzer": "~4.3.0",
 		"yaml-lint": "~1.2.4"
 	}
 }
