chore: migrated to nx 11 eslint and ts setup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,7 +41,7 @@
 			"type": "node",
 			"request": "launch",
 			"env": {
-				"TS_NODE_PROJECT": "./tsconfig.json",
+				"TS_NODE_PROJECT": "./tsconfig.base.json",
 				"TS_NODE_TRANSPILE_ONLY": "true",
 				"TS_NODE_FILES": "true"
 			},
