--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
 		"dotenv": "~8.2.0",
 		"eslint": "~7.16.0",
 		"eslint-config-prettier": "~7.1.0",
+		"eslint-plugin-cypress": "^2.11.2",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-jsdoc": "^30.7.9",
 		"eslint-plugin-prefer-arrow": "^1.2.2",
