--- a/apps/jwt-demo-e2e/.eslintrc.json
+++ b/apps/jwt-demo-e2e/.eslintrc.json
@@ -1,78 +1,13 @@
 {
-	"extends": "../../.eslintrc.json",
+	"extends": ["plugin:cypress/recommended", "../../.eslintrc.json"],
 	"ignorePatterns": ["!**/*"],
 	"overrides": [
 		{
-			"files": ["*.ts"],
-			"parserOptions": {
-				"project": ["apps/jwt-demo-e2e/tsconfig.e2e.json"],
-				"createDefaultProgram": true
-			},
-			"plugins": ["eslint-plugin-react"],
+			"files": ["src/plugins/index.js"],
 			"rules": {
-				"@angular-eslint/component-selector": [
-					"error",
-					{
-						"type": "element",
-						"prefix": "app",
-						"style": "kebab-case"
-					}
-				],
-				"@angular-eslint/directive-selector": [
-					"error",
-					{
-						"type": "attribute",
-						"prefix": "app",
-						"style": "camelCase"
-					}
-				],
-				"@typescript-eslint/consistent-type-definitions": "error",
-				"@typescript-eslint/dot-notation": "off",
-				"@typescript-eslint/explicit-member-accessibility": [
-					"off",
-					{
-						"accessibility": "explicit"
-					}
-				],
-				"@typescript-eslint/member-delimiter-style": [
-					"off",
-					{
-						"multiline": {
-							"delimiter": "none",
-							"requireLast": true
-						},
-						"singleline": {
-							"delimiter": "semi",
-							"requireLast": false
-						}
-					}
-				],
-				"@typescript-eslint/semi": ["off", null],
-				"@typescript-eslint/type-annotation-spacing": "off",
-				"arrow-parens": ["off", "always"],
-				"brace-style": ["off", "off"],
-				"eol-last": "off",
-				"id-blacklist": "off",
-				"id-match": "off",
-				"linebreak-style": "off",
-				"max-len": "off",
-				"new-parens": "off",
-				"newline-per-chained-call": "off",
-				"no-extra-semi": "off",
-				"no-irregular-whitespace": "off",
-				"no-trailing-spaces": "off",
-				"no-underscore-dangle": "off",
-				"quote-props": "off",
-				"react/jsx-curly-spacing": "off",
-				"react/jsx-equals-spacing": "off",
-				"react/jsx-wrap-multilines": "off",
-				"space-before-function-paren": "off",
-				"space-in-parens": ["off", "never"]
+				"@typescript-eslint/no-var-requires": "off",
+				"no-undef": "off"
 			}
-		},
-		{
-			"files": ["*.html"],
-			"rules": {}
 		}
 	]
 }
