--- a/libs/jwt/.eslintrc.json
+++ b/libs/jwt/.eslintrc.json
@@ -1,77 +1,29 @@
 {
-	"extends": "../../.eslintrc.json",
+	"extends": ["../../.eslintrc.json"],
 	"ignorePatterns": ["!**/*"],
 	"overrides": [
 		{
 			"files": ["*.ts"],
-			"parserOptions": {
-				"project": ["libs/jwt/tsconfig.lib.json", "libs/jwt/tsconfig.spec.json"],
-				"createDefaultProgram": true
-			},
-			"plugins": ["eslint-plugin-react"],
+			"extends": [
+				"plugin:@nrwl/nx/angular",
+				"plugin:@angular-eslint/template/process-inline-templates"
+			],
+			"parserOptions": { "project": ["libs/jwt/tsconfig.*?.json"] },
 			"rules": {
-				"@angular-eslint/component-selector": [
-					"error",
-					{
-						"type": "element",
-						"prefix": "aegis-auth",
-						"style": "kebab-case"
-					}
-				],
 				"@angular-eslint/directive-selector": [
 					"error",
-					{
-						"type": "attribute",
-						"prefix": "aegisAuth",
-						"style": "camelCase"
-					}
+					{ "type": "attribute", "prefix": "aegis-auth", "style": "camelCase" }
 				],
-				"@typescript-eslint/consistent-type-definitions": "error",
-				"@typescript-eslint/dot-notation": "off",
-				"@typescript-eslint/explicit-member-accessibility": [
-					"off",
-					{
-						"accessibility": "explicit"
-					}
+				"@angular-eslint/component-selector": [
+					"error",
+					{ "type": "element", "prefix": "aegis-auth", "style": "kebab-case" }
 				],
-				"@typescript-eslint/member-delimiter-style": [
-					"off",
-					{
-						"multiline": {
-							"delimiter": "none",
-							"requireLast": true
-						},
-						"singleline": {
-							"delimiter": "semi",
-							"requireLast": false
-						}
-					}
-				],
-				"@typescript-eslint/semi": ["off", null],
-				"@typescript-eslint/type-annotation-spacing": "off",
-				"arrow-parens": ["off", "always"],
-				"brace-style": ["off", "off"],
-				"eol-last": "off",
-				"id-blacklist": "off",
-				"id-match": "off",
-				"linebreak-style": "off",
-				"max-len": "off",
-				"new-parens": "off",
-				"newline-per-chained-call": "off",
-				"no-extra-semi": "off",
-				"no-irregular-whitespace": "off",
-				"no-trailing-spaces": "off",
-				"no-underscore-dangle": "off",
-				"quote-props": "off",
-				"react/jsx-curly-spacing": "off",
-				"react/jsx-equals-spacing": "off",
-				"react/jsx-wrap-multilines": "off",
-				"space-before-function-paren": "off",
-				"space-in-parens": ["off", "never"]
+				"quotes": ["error", "single", { "avoidEscape": true }]
 			}
 		},
 		{
 			"files": ["*.html"],
+			"extends": ["plugin:@nrwl/nx/angular-template"],
 			"rules": {}
 		}
 	]
