--- a/nx.json
+++ b/nx.json
@@ -1,13 +1,18 @@
 {
 	"npmScope": "aegis-auth",
+	"affected": {
+		"defaultBase": "master"
+	},
 	"implicitDependencies": {
 		"angular.json": "*",
 		"package.json": {
 			"dependencies": "*",
 			"devDependencies": "*"
 		},
+		"tsconfig.base.json": "*",
 		"tsconfig.json": "*",
 		"eslint.json": "*",
+		".eslintrc.json": "*",
 		"nx.json": "*"
 	},
 	"tasksRunnerOptions": {
@@ -44,8 +49,5 @@
 			"tags": [],
 			"implicitDependencies": ["jwt-demo"]
 		}
-	},
-	"affected": {
-		"defaultBase": "master"
 	}
 }
