--- a/package.json
+++ b/package.json
@@ -83,12 +83,12 @@
 		"format:write": "nx format:write",
 		"format:check": "nx format:check",
 		"ncu": "ncu -u",
-		"typedoc": "typedoc libs --tsconfig ./tsconfig.json --out ./dist/typedoc",
+		"typedoc": "typedoc libs --tsconfig ./tsconfig.base.json --out ./dist/typedoc",
 		"update": "ng update @nrwl/workspace",
 		"update:all": "nx update --all --force",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"_postinstall": "husky install && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.json",
+		"_postinstall": "husky install && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.base.json",
 		"release": "standard-version",
 		"release:minor": "standard-version --release-as minor",
 		"release:major": "standard-version --release-as major",
