--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,37 @@
 {
 	"version": 1,
+	"cli": {
+		"defaultCollection": "@nrwl/angular",
+		"analytics": false
+	},
+	"schematics": {
+		"@schematics/angular": {
+			"component": {
+				"changeDetection": "OnPush",
+				"style": "scss",
+				"flat": true
+			}
+		},
+		"@nrwl/angular": {
+			"application": {
+				"linter": "eslint"
+			},
+			"library": {
+				"linter": "eslint"
+			},
+			"storybook-configuration": {
+				"linter": "eslint"
+			}
+		},
+		"@nrwl/angular:application": {
+			"unitTestRunner": "jest",
+			"e2eTestRunner": "cypress"
+		},
+		"@nrwl/angular:library": {
+			"unitTestRunner": "jest"
+		}
+	},
+	"defaultProject": "core",
 	"projects": {
 		"core": {
 			"projectType": "library",
@@ -351,19 +383,5 @@
 				}
 			}
 		}
-	},
-	"cli": {
-		"defaultCollection": "@nrwl/angular",
-		"analytics": false
-	},
-	"schematics": {
-		"@nrwl/angular:application": {
-			"unitTestRunner": "jest",
-			"e2eTestRunner": "cypress"
-		},
-		"@nrwl/angular:library": {
-			"unitTestRunner": "jest"
-		}
-	},
-	"defaultProject": "core"
+	}
 }
