chore: migrated to npm7 from yarn

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,26 +22,26 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install packages
         if: steps.cache-packages.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
+        run: npm install --frozen-lockfile
       - name: Lint packages
-        run: yarn lint
+        run: npm lint
       - name: Lint scss stylesheets
-        run: yarn run lint:scss
+        run: npm run lint:scss
       - name: Lint css stylesheets
-        run: yarn run lint:css
+        run: npm run lint:css
       - name: Lint markdown
-        run: yarn run lint:md
+        run: npm run lint:md
       - name: Lint markdown with remark
-        run: yarn run lint:rmd
+        run: npm run lint:rmd
       - name: Lint format
-        run: yarn run lint:format
+        run: npm run lint:format
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -57,16 +57,16 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install packages
         if: steps.cache-packages.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
+        run: npm ci
       - name: Test
-        run: yarn test:skip-cache
+        run: npm run test:skip-cache
       - name: Upload coverage result to codacy
         run: |
           export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }}
@@ -91,13 +91,13 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install packages
         if: steps.cache-packages.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
+        run: npm ci
       - name: Build production
-        run: yarn build
+        run: npm run build
