--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
@@ -30,12 +30,12 @@ jobs:
           echo "$JWT_IS_ON_NPM"
       - name: Install dependencies
         if: env.JWT_IS_ON_NPM != 'true' && steps.cache-packages.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
+        run: npm ci
       - name: Build
         if: env.JWT_IS_ON_NPM != 'true'
         run: |
-          yarn build
-          yarn hoist:core
+          npm run build
+          npm run hoist:core
       - name: Release @aegis-auth/jwt on NPM
         if: env.JWT_IS_ON_NPM != 'true'
         env:
