--- a/libs/jwt/package.json
+++ b/libs/jwt/package.json
@@ -29,13 +29,13 @@
 		"javascript"
 	],
 	"peerDependencies": {
-		"@angular/common": "11.*.*",
-		"@angular/core": "11.*.*",
-		"@angular/router": "11.*.*",
-		"rxjs": "6.6.*"
+		"@angular/common": "^11.0.0",
+		"@angular/core": "^11.0.0",
+		"@angular/router": "^11.0.0",
+		"rxjs": "^6.0.0"
 	},
 	"dependencies": {
 		"js-base64": "^3.6.0",
-		"tslib": "2.*.*"
+		"tslib": "^2.0.0"
 	}
 }
