--- a/package.json
+++ b/package.json
@@ -37,15 +37,13 @@
 		"engine-strict": true
 	},
 	"engines": {
-		"node": ">=10.13.0",
-		"yarn": ">=1.0.0"
+		"node": ">=14.0.0",
+		"npm": ">=7.0.0"
 	},
-	"workspaces": {
-		"packages": [
-			"apps/*",
-			"libs/*"
-		]
-	},
+	"workspaces": [
+		"apps/*",
+		"libs/*"
+	],
 	"scripts": {
 		"ng": "ng",
 		"nx": "nx",
@@ -87,63 +85,63 @@
 		"update:all": "nx update --all --force",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"_postinstall": "husky install && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.base.json",
+		"_postinstall": "husky install && node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
 		"release": "standard-version",
 		"release:minor": "standard-version --release-as minor",
 		"release:major": "standard-version --release-as major",
-		"prepublishOnly": "yarn build",
+		"prepublishOnly": "npm run build",
 		"prepublish": "pinst --disable",
 		"postpublish": "pinst --enable",
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "11.2.5",
-		"@angular/cdk": "^11.2.4",
-		"@angular/common": "11.2.5",
-		"@angular/compiler": "11.2.5",
-		"@angular/core": "11.2.5",
-		"@angular/forms": "11.2.5",
-		"@angular/material": "^11.2.4",
-		"@angular/platform-browser": "11.2.5",
-		"@angular/platform-browser-dynamic": "11.2.5",
-		"@angular/router": "11.2.5",
+		"@angular/animations": "11.2.12",
+		"@angular/cdk": "^11.2.11",
+		"@angular/common": "11.2.12",
+		"@angular/compiler": "11.2.12",
+		"@angular/core": "11.2.12",
+		"@angular/forms": "11.2.12",
+		"@angular/material": "^11.2.11",
+		"@angular/platform-browser": "11.2.12",
+		"@angular/platform-browser-dynamic": "11.2.12",
+		"@angular/router": "11.2.12",
 		"@fortawesome/angular-fontawesome": "^0.8.2",
-		"@fortawesome/fontawesome-svg-core": "^1.2.34",
-		"@fortawesome/free-brands-svg-icons": "^5.15.2",
-		"@fortawesome/free-solid-svg-icons": "^5.15.2",
-		"@nrwl/angular": "11.5.1",
-		"core-js": "~3.9.1",
-		"rxjs": "~6.6.6",
-		"tslib": "^2.1.0",
+		"@fortawesome/fontawesome-svg-core": "^1.2.35",
+		"@fortawesome/free-brands-svg-icons": "^5.15.3",
+		"@fortawesome/free-solid-svg-icons": "^5.15.3",
+		"@nrwl/angular": "12.0.8",
+		"core-js": "~3.11.2",
+		"rxjs": "~6.5.3",
+		"tslib": "^2.2.0",
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "0.1102.4",
-		"@angular-eslint/builder": "^2.0.1",
-		"@angular-eslint/eslint-plugin": "^2.0.1",
-		"@angular-eslint/eslint-plugin-template": "^2.0.1",
-		"@angular-eslint/schematics": "^2.0.1",
-		"@angular-eslint/template-parser": "^2.0.1",
-		"@angular/cli": "11.2.4",
-		"@angular/compiler-cli": "11.2.5",
-		"@angular/language-service": "11.2.5",
-		"@commitlint/cli": "~12.0.1",
-		"@commitlint/config-conventional": "~12.0.1",
-		"@nrwl/cypress": "11.5.1",
-		"@nrwl/eslint-plugin-nx": "11.5.1",
-		"@nrwl/jest": "11.5.1",
-		"@nrwl/linter": "11.5.1",
-		"@nrwl/node": "11.5.1",
-		"@nrwl/web": "11.5.1",
-		"@nrwl/workspace": "11.5.1",
-		"@types/jest": "~26.0.20",
+		"@angular-devkit/build-angular": "0.1102.11",
+		"@angular-eslint/builder": "^4.2.0",
+		"@angular-eslint/eslint-plugin": "^4.2.0",
+		"@angular-eslint/eslint-plugin-template": "^4.2.0",
+		"@angular-eslint/schematics": "^4.2.0",
+		"@angular-eslint/template-parser": "^4.2.0",
+		"@angular/cli": "11.2.11",
+		"@angular/compiler-cli": "11.2.12",
+		"@angular/language-service": "11.2.12",
+		"@commitlint/cli": "~12.1.1",
+		"@commitlint/config-conventional": "~12.1.1",
+		"@nrwl/cypress": "12.0.8",
+		"@nrwl/eslint-plugin-nx": "12.0.8",
+		"@nrwl/jest": "12.0.8",
+		"@nrwl/linter": "12.0.8",
+		"@nrwl/node": "12.0.8",
+		"@nrwl/web": "12.0.8",
+		"@nrwl/workspace": "12.0.8",
+		"@types/jest": "~26.0.23",
 		"@types/js-base64": "~3.0.0",
-		"@types/node": "14.14.34",
-		"@typescript-eslint/eslint-plugin": "~4.17.0",
-		"@typescript-eslint/parser": "~4.17.0",
-		"codelyzer": "6.0.1",
+		"@types/node": "15.0.1",
+		"@typescript-eslint/eslint-plugin": "~4.22.0",
+		"@typescript-eslint/parser": "~4.22.0",
+		"compression-webpack-plugin": "^6.1.1",
 		"cpy-cli": "^3.1.1",
-		"cypress": "~6.6.0",
+		"cypress": "^6.0.1",
 		"dotenv": "~8.2.0",
 		"eslint": "~7.25.0",
 		"eslint-config-prettier": "~8.3.0",
@@ -160,7 +158,7 @@
 		"markdownlint": "~0.23.1",
 		"markdownlint-cli": "~0.27.1",
 		"ng-packagr": "^11.2.4",
-		"npm-check-updates": "~11.3.0",
+		"npm-check-updates": "~11.5.10",
 		"pinst": "^2.1.6",
 		"prettier": "~2.2.1",
 		"remark": "~13.0.0",
@@ -170,17 +168,16 @@
 		"remark-preset-lint-consistent": "~4.0.0",
 		"remark-preset-lint-recommended": "~5.0.0",
 		"rimraf": "~3.0.2",
-		"rollup": "~2.41.2",
+		"rollup": "~2.46.0",
 		"rollup-plugin-gzip": "~2.5.0",
 		"rollup-plugin-terser": "~7.0.2",
-		"standard-version": "~9.1.1",
-		"stylelint": "~13.12.0",
+		"standard-version": "~9.2.0",
+		"stylelint": "~13.13.1",
 		"stylelint-config-prettier": "~8.0.2",
 		"stylelint-prettier": "~1.2.0",
 		"ts-jest": "~26.5.5",
 		"ts-node": "9.1.1",
-		"typedoc": "~0.20.32",
-		"typedoc-plugin-external-module-name": "~4.0.6",
+		"typedoc": "~0.20.36",
 		"typescript": "~4.1.4",
 		"webpack-bundle-analyzer": "~4.4.1",
 		"yaml-lint": "~1.2.4"
