--- a/package.json
+++ b/package.json
@@ -85,12 +85,11 @@
 		"update:all": "nx update --all --force",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"_postinstall": "husky install && node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+		"postinstall": "husky install && node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
 		"release": "standard-version",
 		"release:minor": "standard-version --release-as minor",
 		"release:major": "standard-version --release-as major",
-		"prepublishOnly": "npm run build",
-		"prepublish": "pinst --disable",
+		"prepublishOnly": "pinst --disable && npm run build",
 		"postpublish": "pinst --enable",
 		"workspace-generator": "nx workspace-generator"
 	},
