chore: update packages, jest migration (#444)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,26 +22,28 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Ensure NPM 7
+        run: npm install --global npm@7
       - name: Install packages
         if: steps.cache-packages.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
+        run: npm install --frozen-lockfile
       - name: Lint packages
-        run: yarn lint
+        run: npm run lint
       - name: Lint scss stylesheets
-        run: yarn run lint:scss
+        run: npm run lint:scss
       - name: Lint css stylesheets
-        run: yarn run lint:css
+        run: npm run lint:css
       - name: Lint markdown
-        run: yarn run lint:md
+        run: npm run lint:md
       - name: Lint markdown with remark
-        run: yarn run lint:rmd
+        run: npm run lint:rmd
       - name: Lint format
-        run: yarn run lint:format
+        run: npm run lint:format
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -57,16 +59,18 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Ensure NPM 7
+        run: npm install --global npm@7
       - name: Install packages
         if: steps.cache-packages.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
+        run: npm ci
       - name: Test
-        run: yarn test:skip-cache
+        run: npm run test:skip-cache
       - name: Upload coverage result to codacy
         run: |
           export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }}
@@ -75,7 +79,7 @@ jobs:
       - name: Upload coverage result to codecov
         run: |
           bash <(curl -s https://codecov.io/bash) \
-          -t ${{ secrets.CODECOV_TOKEN }}
+          -s coverage/* -t ${{ secrets.CODECOV_TOKEN }}
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -91,13 +95,15 @@ jobs:
         uses: actions/cache@v2
         with:
           path: node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Ensure NPM 7
+        run: npm install --global npm@7
       - name: Install packages
         if: steps.cache-packages.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
+        run: npm ci
       - name: Build production
-        run: yarn build
+        run: npm run build
