chore: stylelint ignore coverage folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,8 @@
 		"**/.DS_Store": true
 	},
 	"files.associations": {
-		"*.json": "jsonc"
+		"*.json": "jsonc",
+		".stylelintrc": "jsonc"
 	},
 	"terminal.integrated.windowsEnableConpty": true,
 	"remote.extensionKind": {
