--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aegis-auth/core",
   "description": "Angular authentication libraries",
-  "version": "11.0.1",
+  "version": "11.1.0",
   "license": "MIT",
   "author": {
     "email": "alexaegis@gmail.com",
@@ -31,7 +31,7 @@
   },
   "peerDependencies": {
     "@angular/common": "11.*.*",
-    "@angular/core": "101*.*"
+    "@angular/core": "11.*.*"
   },
   "main": "bundles/aegis-auth-core.umd.js",
   "module": "fesm2015/aegis-auth-core.js",
