--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
+		"@angular-builders/custom-webpack": "^11.1.1",
 		"@angular-devkit/build-angular": "0.1102.11",
 		"@angular-eslint/builder": "^4.2.0",
 		"@angular-eslint/eslint-plugin": "^4.2.0",
