--- a/package.json
+++ b/package.json
@@ -94,54 +94,54 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "11.2.12",
-		"@angular/cdk": "^11.2.11",
-		"@angular/common": "11.2.12",
-		"@angular/compiler": "11.2.12",
-		"@angular/core": "11.2.12",
-		"@angular/forms": "11.2.12",
-		"@angular/material": "^11.2.11",
-		"@angular/platform-browser": "11.2.12",
-		"@angular/platform-browser-dynamic": "11.2.12",
-		"@angular/router": "11.2.12",
+		"@angular/animations": "12.2.16",
+		"@angular/cdk": "12.2.13",
+		"@angular/common": "12.2.16",
+		"@angular/compiler": "12.2.16",
+		"@angular/core": "12.2.16",
+		"@angular/forms": "12.2.16",
+		"@angular/material": "12.2.13",
+		"@angular/platform-browser": "12.2.16",
+		"@angular/platform-browser-dynamic": "12.2.16",
+		"@angular/router": "12.2.16",
 		"@fortawesome/angular-fontawesome": "^0.8.2",
 		"@fortawesome/fontawesome-svg-core": "^1.2.35",
 		"@fortawesome/free-brands-svg-icons": "^5.15.3",
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
-		"@nrwl/angular": "12.1.0",
+		"@nrwl/angular": "12.10.1",
 		"core-js": "~3.11.2",
 		"rxjs": "~6.5.3",
 		"tslib": "^2.2.0",
-		"zone.js": "~0.11.4"
+		"zone.js": "0.11.5"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "0.1102.11",
+		"@angular-devkit/build-angular": "12.2.17",
 		"@angular-eslint/builder": "^4.2.0",
-		"@angular-eslint/eslint-plugin": "^4.2.0",
-		"@angular-eslint/eslint-plugin-template": "^4.2.0",
+		"@angular-eslint/eslint-plugin": "12.3.1",
+		"@angular-eslint/eslint-plugin-template": "12.3.1",
 		"@angular-eslint/schematics": "^4.2.0",
-		"@angular-eslint/template-parser": "^4.2.0",
-		"@angular/cli": "11.2.11",
-		"@angular/compiler-cli": "11.2.12",
-		"@angular/language-service": "11.2.12",
+		"@angular-eslint/template-parser": "12.3.1",
+		"@angular/cli": "12.2.17",
+		"@angular/compiler-cli": "12.2.16",
+		"@angular/language-service": "12.2.16",
 		"@commitlint/cli": "~12.1.1",
 		"@commitlint/config-conventional": "~12.1.2",
-		"@nrwl/cypress": "12.1.0",
-		"@nrwl/eslint-plugin-nx": "12.1.0",
-		"@nrwl/jest": "12.0.8",
-		"@nrwl/linter": "12.1.0",
-		"@nrwl/node": "12.1.0",
-		"@nrwl/web": "12.0.8",
-		"@nrwl/workspace": "11.6.3",
-		"@types/jest": "~26.0.23",
+		"@nrwl/cypress": "12.10.1",
+		"@nrwl/eslint-plugin-nx": "12.10.1",
+		"@nrwl/jest": "12.10.1",
+		"@nrwl/linter": "12.10.1",
+		"@nrwl/node": "12.10.1",
+		"@nrwl/web": "12.10.1",
+		"@nrwl/workspace": "12.10.1",
+		"@types/jest": "27.0.2",
 		"@types/js-base64": "~3.0.0",
 		"@types/node": "15.0.1",
-		"@typescript-eslint/eslint-plugin": "~4.22.0",
-		"@typescript-eslint/parser": "~4.22.0",
+		"@typescript-eslint/eslint-plugin": "4.31.2",
+		"@typescript-eslint/parser": "4.31.2",
 		"compression-webpack-plugin": "^6.1.1",
 		"cpy-cli": "^3.1.1",
 		"cypress": "^6.0.1",
-		"dotenv": "~8.2.0",
+		"dotenv": "10.0.0",
 		"eslint": "~7.25.0",
 		"eslint-config-prettier": "~8.3.0",
 		"eslint-plugin-cypress": "^2.11.2",
@@ -151,15 +151,15 @@
 		"eslint-plugin-prettier": "~3.4.0",
 		"eslint-plugin-react": "latest",
 		"husky": "^6.0.0",
-		"jest": "~26.6.3",
-		"jest-preset-angular": "8.4.0",
+		"jest": "27.2.3",
+		"jest-preset-angular": "10.0.1",
 		"lint-staged": "~10.5.4",
 		"markdownlint": "~0.23.1",
 		"markdownlint-cli": "~0.27.1",
-		"ng-packagr": "^11.2.4",
+		"ng-packagr": "12.2.7",
 		"npm-check-updates": "~11.5.10",
 		"pinst": "^2.1.6",
-		"prettier": "~2.2.1",
+		"prettier": "2.6.2",
 		"remark": "~13.0.0",
 		"remark-cli": "~9.0.0",
 		"remark-lint": "~8.0.0",
@@ -174,10 +174,10 @@
 		"stylelint": "~13.13.1",
 		"stylelint-config-prettier": "~8.0.2",
 		"stylelint-prettier": "~1.2.0",
-		"ts-jest": "~26.5.5",
+		"ts-jest": "27.0.5",
 		"ts-node": "9.1.1",
 		"typedoc": "~0.20.36",
-		"typescript": "~4.1.4",
+		"typescript": "4.3.5",
 		"webpack-bundle-analyzer": "~4.4.1",
 		"yaml-lint": "~1.2.4"
 	}
